[project]
name = "06-multi-agent-with-langgraph"
version = "0.1.0"
description = "Multi-agent workflows using LangGraph and LangChain"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph==0.2.14",
    "langchain==0.2.14",
    "langchain_openai==0.1.23",
    "langchain_core==0.2.35",
    "langchain-community",
    "tiktoken",
    "qdrant-client",
    "pymupdf",
    "arxiv"
]
